--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
 SERVER_ADDRESS=0.0.0.0:8080
 TOKEN_SYMMETRIC_KEY=b7985f000c7d4ace90f0202d858b688b
 ACCESS_TOKEN_DURATION=15m
+REFRESH_TOKEN_DURATION=24h
