--- a/app.env
+++ b/app.env
@@ -1,6 +1,7 @@
 DB_DRIVER=postgres
 DB_SOURCE=postgresql://root:secret@localhost:5432/simple_bank?sslmode=disable
-SERVER_ADDRESS=0.0.0.0:8080
+HTTP_SERVER_ADDRESS=0.0.0.0:8080
+GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=b7985f000c7d4ace90f0202d858b688b
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
