--- a/app.env
+++ b/app.env
@@ -5,3 +5,4 @@ GRPC_SERVER_ADDRESS=0.0.0.0:9090
 TOKEN_SYMMETRIC_KEY=b7985f000c7d4ace90f0202d858b688b
 ACCESS_TOKEN_DURATION=15m
 REFRESH_TOKEN_DURATION=24h
+MIGRATION_URL=file://db/migration
